# sistema-monorepo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0000_extensions.py  0001_initial_schema.py  0002_pgvector_indexes.py  0003_seed_baseline.py  0004_students_last_seen_index.py  0005_seed_intents_full.py  0006_enrich_intent_examples.py  0007_messages_intent_used_fallback.py  0008_messages_admin_id.py  0009_seed_agent_system_prompt.py  0010_student_profiles.py  0011_agent_prompt_v2.py  0012_document_program.py  0013_agent_prompt_v3.py  0013_contact_tags_notes.py  0014_messages_in_reply_to.py  0015_agent_prompt_v4.py  0016_messages_delivery_status.py  0017_agent_prompt_v5.py  0018_agent_prompt_v7.py  0019_agent_prompt_v8.py  0020_agent_prompt_v9.py  0021_agent_prompt_v10.py  91898e0866cc_admin_devices_for_fcm_push.py
apps/api/scripts/: backfill_document_program.py  bulk_ingest.py  eval_ask.py  migrate_uploads_to_s3.py  seed.py  seed_student_profiles.py  send_test_push.py
apps/api/src/chatbot_api/: main.py
apps/api/src/chatbot_api/api/: dependencies.py  public.py  webhooks.py
apps/api/src/chatbot_api/core/: celery_app.py  db.py  events.py  lifespan.py  logging.py  programs.py  security.py  settings.py  storage.py  text.py  timezone.py
apps/api/src/chatbot_api/middlewares/: correlation.py
apps/api/src/chatbot_api/models/: __init__.py  admin.py  admin_device.py  base.py  conversation.py  conversation_intent.py  conversation_tag.py  document.py  document_chunk.py  enums.py  intent.py  internal_note.py  message.py  metrics_daily.py  notification.py  prompt_version.py  student.py  student_profile.py  tag.py
apps/api/src/chatbot_api/rag/: embeddings.py  loaders.py  malla_extractor.py  malla_normalizer.py  retriever.py  splitter.py  tools.py
apps/api/src/chatbot_api/repositories/: admin.py  admin_device.py  base.py  conversation.py  document.py  document_chunk.py  intent.py  internal_note.py  message.py  notification.py  prompt_version.py  student.py  student_profile.py  tag.py
apps/api/src/chatbot_api/schemas/: admin.py  admin_device.py  auth.py  common.py  conversation.py  document.py  intent.py  internal_note.py  message.py  monitoring.py  notification.py  pagination.py  prompt.py  student.py  student_profile.py  tag.py  whatsapp.py
apps/api/src/chatbot_api/scripts/: bootstrap_admin.py
apps/api/src/chatbot_api/services/: admin_service.py  auth_service.py  conversation_history_service.py  conversation_service.py  document_service.py  intent_service.py  (+14 more)
apps/api/tests/: conftest.py  factories.py  test_bootstrap_admin.py  test_contact_panel.py  test_conversation_reopen.py  test_delivery_status.py  test_health.py  test_models.py  test_public_docs.py  test_push_cleanup.py  test_rag_integration.py  test_rag_unit.py  test_reply_quote.py  test_routers_reads.py  test_routers_smoke.py  test_sw10_bot_reply.py  test_sw12_welcome.py  test_sw14_intent_classifier.py  test_sw16_intent_crud.py  test_sw18_memory.py  test_sw22_ocr.py  test_sw26_history_cache.py  test_sw28_monitoring.py  test_sw29_sw31_escalation_notify.py  test_sw30_escalation.py  test_sw38_admin_message.py  test_sw39_conversation_actions.py  test_sw46_program_scope.py  test_sw48_student_profile.py  test_sw53_s3_storage.py  test_sw54_prompt_versions.py  test_webhook_whatsapp.py
infra/cdk/: README.md  app.py  cdk.context.json  cdk.json  deploy_runbook.ipynb  pyproject.toml
infra/cdk/stacks/: auth_stack.py  cicd_stack.py  compute_stack.py  config.py  data_stack.py  frugal_stack.py  network_stack.py  observability_stack.py
(+416 files in other folders)
