[project]
name = "chatbot-api"
version = "0.1.0"
description = "Chatbot UPC — FastAPI backend (RAG + WhatsApp + admin CRM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.39.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.5.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "ASYNC",
    "S",
    "RUF",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
