[project]
name = "chatbot-api"
version = "0.1.0"
description = "Chatbot UPC — FastAPI backend (RAG + WhatsApp + admin CRM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.39.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    "unstructured>=0.15",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "email-validator>=2.2",
    "firebase-admin>=6.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "testcontainers[postgres]>=4.8",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "ASYNC",
    "S",
    "RUF",
]
ignore = ["S101", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pgvector.*",
    "testcontainers.*",
    "celery.*",
    "langchain_classic.*",
    "boto3.*",
    "botocore.*",
    "jose.*",
    "firebase_admin.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
