[project]
name = "chatbot-upc-cdk"
version = "0.1.0"
description = "IaC (AWS CDK Python) de la arquitectura objetivo del chatbot UPC — plan de continuidad de tesis"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.170.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
